[metadata]
name = conn
version = 0.0.1
author = David Graham
author_email = graham.david@epa.gov
description = utility for automating e-Manifest task

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    requests
    python-dotenv

[options.entry_points]
console_scripts =
           conn = src:main
